--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "posttest": "npm run lint"
   },
   "devDependencies": {
-    "@kenan/eslint-config": "8.0.0",
+    "@kenan/eslint-config": "^8.0.4",
     "@kenan/renovate-config": "^1.5.0",
     "eslint": "^7.18.0",
     "lodash.isfunction": "3.0.9",
