--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   ],
   "repository": "KenanY/wallis-product",
   "license": "MIT",
-  "author": "Kenan Yildirim <kenan@kenany.me> (http://kenany.me/)",
+  "author": "Kenan Yildirim <kenan@kenany.me> (https://kenany.me/)",
   "main": "index.js",
   "files": [
     "index.js",
@@ -25,7 +25,7 @@
     "@kenan/eslint-config": "^9.0.4",
     "@kenan/renovate-config": "^1.5.1",
     "eslint": "^7.32.0",
-    "lodash.isfunction": "3.0.9",
-    "tape": "^5.3.1"
+    "lodash.isfunction": "^3.0.9",
+    "tape": "^5.4.0"
   }
 }
