--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
   "directories": {
     "test": "test"
   },
+  "engines": {
+    "node": "14 || 16 || >=18"
+  },
   "scripts": {
     "lint": "eslint *.js test/*.js",
     "test": "tape test/index.js",
     "posttest": "npm run lint"
   },
   "devDependencies": {
-    "@kenan/eslint-config": "^9.0.4",
-    "eslint": "^7.32.0",
+    "@kenan/eslint-config": "^10.0.1",
+    "eslint": "^8.30.0",
     "lodash.isfunction": "^3.0.9",
     "tape": "^5.6.1"
   }
