--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "keywords": [
     "math"
   ],
-  "repository": "KenanY/wallis-product",
+  "repository": "github:kenany/wallis-product",
   "license": "MIT",
   "author": "Kenan Yildirim <kenan@kenany.me> (https://kenany.me/)",
   "main": "index.js",
@@ -17,7 +17,7 @@
     "test": "test"
   },
   "engines": {
-    "node": "14 || 16 || >=18"
+    "node": "18 || >=20"
   },
   "scripts": {
     "lint": "eslint *.js test/*.js",
@@ -25,9 +25,13 @@
     "posttest": "npm run lint"
   },
   "devDependencies": {
-    "@kenan/eslint-config": "^10.0.2",
-    "eslint": "^8.48.0",
+    "@kenan/eslint-config": "^11.0.1",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "conventional-changelog-conventionalcommits": "^7.0.2",
+    "eslint": "^8.50.0",
     "lodash.isfunction": "^3.0.9",
-    "tape": "^5.6.6"
+    "semantic-release": "^22.0.5",
+    "tape": "^5.7.0"
   }
 }
